--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "dev" : "nodemon server/server.js",
+    "dev": "nodemon server/server.js",
     "start": "node server/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "mongoose": "^8.1.0",
     "nodemon": "^3.0.3"
   }
 }
