--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
     "@reduxjs/toolkit": "^2.2.1",
     "bootstrap": "^5.3.2",
     "firebase": "^10.8.0",
+    "flowbite": "^2.3.0",
+    "flowbite-react": "^0.7.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
