--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "firebase": "^10.8.0",
     "flowbite": "^2.3.0",
     "flowbite-react": "^0.7.3",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-circular-progressbar": "^2.1.0",
