--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-bootstrap": "^2.10.2",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
+    "react-photo-view": "^1.2.4",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.23.0",
